created patternTwo page under pattern recognition

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
      - images/galaxy.png
      - images/m1.mp4
+     - images/pq1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
