--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  video_player: ^2.2.6
+  chewie: ^1.4.0
+  file_picker: ^5.2.6
+  video_player: ^2.6.1
+  firebase_database: ^10.1.0
+  firebase_core: ^2.9.0
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +69,10 @@ flutter:
     - images/pq1.jpg
     - images/pq2.jpg
     - images/pq3.jpg
+    - images/pq4.jpg
     - images/right.jpg
     - images/left.jpg
+    - videos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
