--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   file_picker: ^5.2.6
   video_player: ^2.6.1
   firebase_database: ^10.1.0
+  cloud_firestore: ^4.5.3
   firebase_core: ^2.9.0
+  firebase_storage: ^11.1.1
+  image_picker: ^0.8.7+3
 
 dev_dependencies:
   flutter_test:
