--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   firebase_core: ^2.9.0
   firebase_storage: ^11.1.1
   image_picker: ^0.8.7+3
+  path_provider: ^2.0.14
+  firebase_auth: ^4.6.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
